# akhramov.github.io

./: .gitignore  about.html  about.org  archive.html  atom.xml  blog.cabal  index.html  rss.xml  site.hs
css/: Code.hs  CodeStyle.hs  Default.hs  Layout.hs  Post.hs  Typography.hs  default.css
posts/: 2017-12-27-emacs-wishes-2018.html  2017-12-27-emacs-wishes-2018.org  2021-03-08-jailed-tests.html  2021-03-08-jailed-tests.org  2021-09-16-FreeBSD-OCI-jails.html  2021-09-16-FreeBSD-OCI-jails.org
tags/: FreeBSD.html  OCI.html  Rust.html  VNET.html  containers.html  emacs.html  jail.html
templates/: archive.html  default.html  post-list.html  post.html
